增加了启动页的海报

--- a/pages/banner/banner.wxml
+++ b/pages/banner/banner.wxml
@@ -2,8 +2,8 @@
 <!--pages/start/start.wxml-->
 <view class="root1">
 <!-- 背景图片 -->
-  <image class='background2' src='../../images/banner.jpg' mode="widthFix"></image>
-  <image class='background' src='../../images/banner.jpg' mode="widthFix"></image>
+  <image class='background2' src='../../images/banner.png' mode="widthFix"></image>
+  <!-- <image class='background' src='../../images/banner.png' mode="widthFix"></image> -->
  <!-- 页面内容 -->
   <view class="content">
     <view class="timer">{{time}}</view>
