--- a/pages/banner/banner.wxss
+++ b/pages/banner/banner.wxss
@@ -20,8 +20,8 @@ page{
 	/* left: 10%; */
 	 position: fixed;
 	 width: 100%;
-	 opacity: 0.5;
-	 bottom: 0;
+	 /* opacity: 0.5; */
+	 top: 0;
 
 }
 	
