--- a/pages/community/community.wxml
+++ b/pages/community/community.wxml
@@ -70,10 +70,27 @@
           </view>
           <view class="subscribe">关注</view>
         </view>
-        <view class="post-content">关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解馋馋馋馋馋馋馋关注嘉然顿顿解馋</view>
+        <view class="post-content"> 该系统的主要应用场景包括但不限于日常社交、工作环境中的会议与讨论、教育场景中的课堂交流，以及其他需要语音输入和手语交流的情境。</view>
         <view class="post-end">
             <image class="post-like-icon" src="../../images/icons/like.png"></image>
             <view class="post-index-num">12</view>
+            <image class="post-comment-icon" src="../../images/icons/comment.png"></image>
+            <view class="post-index-num">10</view>
+        </view>
+      </view>
+      <view class="post">
+        <view class="post-head">
+          <view class="post-icon"></view>
+          <view class="post-info">
+            <view class="poster">白日糖</view>
+            <view class="post-time">1小时13分前</view>
+          </view>
+          <view class="subscribe">关注</view>
+        </view>
+        <view class="post-content">项目的主要目标人群是聋哑人群体，希望通过这一系统帮助他们更自由、自然地与他人进行交流。此外，该系统也可为语音输入和手语交流技术的研究者、相关领域的专业人士提供一个创新的工具。</view>
+        <view class="post-end">
+            <image class="post-like-icon" src="../../images/icons/like.png"></image>
+            <view class="post-index-num">20</view>
             <image class="post-comment-icon" src="../../images/icons/comment.png"></image>
             <view class="post-index-num">12</view>
         </view>
@@ -83,33 +100,16 @@
           <view class="post-icon"></view>
           <view class="post-info">
             <view class="poster">白日糖</view>
-            <view class="post-time">1小时前</view>
+            <view class="post-time">2小时前</view>
           </view>
           <view class="subscribe">关注</view>
         </view>
-        <view class="post-content">关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解馋馋馋馋馋馋馋关注嘉然顿顿解馋</view>
+        <view class="post-content">本项目旨在充分利用先进的语音识别技术，为聋哑人群体创造更加便捷、自主的交流环境，搭建一座连接他们与世界的桥梁，为实现科技创新造福社会贡献一份力量。</view>
         <view class="post-end">
             <image class="post-like-icon" src="../../images/icons/like.png"></image>
-            <view class="post-index-num">12</view>
+            <view class="post-index-num">9</view>
             <image class="post-comment-icon" src="../../images/icons/comment.png"></image>
-            <view class="post-index-num">12</view>
-        </view>
-      </view>
-      <view class="post">
-        <view class="post-head">
-          <view class="post-icon"></view>
-          <view class="post-info">
-            <view class="poster">白日糖</view>
-            <view class="post-time">1小时前</view>
-          </view>
-          <view class="subscribe">关注</view>
-        </view>
-        <view class="post-content">关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解关注嘉然顿顿解馋馋馋馋馋馋馋关注嘉然顿顿解馋</view>
-        <view class="post-end">
-            <image class="post-like-icon" src="../../images/icons/like.png"></image>
-            <view class="post-index-num">12</view>
-            <image class="post-comment-icon" src="../../images/icons/comment.png"></image>
-            <view class="post-index-num">12</view>
+            <view class="post-index-num">7</view>
         </view>
       </view>
     </view>
