--- a/pages/community/community.wxss
+++ b/pages/community/community.wxss
@@ -74,8 +74,8 @@ page{
   background-color: white;
   display: flex;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.055);
-  border-radius: ;
-  /* justify-content: space-evenly; */
+  border-radius: 10px;
+  justify-content: space-evenly;
   /* align-items: center; */
 }
 
