--- a/pages/myself/myself.wxss
+++ b/pages/myself/myself.wxss
@@ -59,22 +59,30 @@ page{
 
 .choices{
   width: 100%;
-  font-family:cursive;
-  font-weight: bolder;
-  font-size: larger;
   margin-top: 20px;
+  font-size: 85%;
+  font-weight: bold;
+  font-family: 等线;
 }
 
 .choice{
   padding-top: 8px;
   width: 100%;
   height: 28px;
-  font-size: 15px;
   background-color: white;
   padding-left: 10px;
   box-shadow:0 1px 5px rgba(0,0,0,0.1);
+  position: relative;
 }
 
+.arrorw{
+  position: absolute;
+  top: 25%;
+  height: 50%;
+  width: 10%;
+  margin-right: 20px;
+  right: 0;
+}
 /* .divLine{
   background-color: rgb(200, 200, 200);
   width: 100%;
